--- a/ledger/templates/ledger/recipe_list.html
+++ b/ledger/templates/ledger/recipe_list.html
@@ -4,10 +4,10 @@
     <title>Recipe List</title>
 </head>
 <body>
-    <h1>Recipe Book</h1>
+    <h1>Recipe List</h1>
     <ul>
         {% for recipe in recipes %}
-            <li><a href="{{ recipe.link }}">{{ recipe.name }}</a></li>
+            <li><a href="{{ recipe.get_absolute_url }}">{{ recipe.name }}</a></li>
         {% endfor %}
     </ul>
 </body>
