--- a/ledger/templates/ledger/recipe_list.html
+++ b/ledger/templates/ledger/recipe_list.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 
+{% block title %}Recipes{% endblock %}
+{% block page_heading %}Recipe List{% endblock %}
+
 {% block content %}
 
     <p>Recipe List</p>
