--- a/ledger/templates/registration/login.html
+++ b/ledger/templates/registration/login.html
@@ -1,15 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Login | Recipe Book</title>
-</head>
-<body>
-    <h1>Login to Recipe Book</h1>
-    <form method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Login</button>
-    </form>
-    <p>Don't have an account? <a href="#">Sign up</a></p>
-</body>
-</html>
+{% block content %}
+<h2>Login</h2>
+<form method="POST">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Login</button>
+</form>
+{% endblock %}
