--- a/ledger/templates/base.html
+++ b/ledger/templates/base.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Recipe Book | {% block title %}Home{% endblock %}</title>
+    <title>Recipe Book</title>
 </head>
 <body>
     <header>
-        <h1><a href="{% url 'recipe_list' %}">Recipe Book</a></h1>
+        <h1>Recipe Book</h1>
+        <h2>{% block page_heading %}{{ page_title }}{% endblock %}</h2>
         <nav>
             {% if user.is_authenticated %}
                 <form method="POST" action="{% url 'logout' %}" style="display:inline;">
@@ -17,8 +18,6 @@
             {% endif %}
         </nav>
     </header>
-
-    <h2>{% block page_heading %}Welcome{% endblock %}</h2>
 
     <main>
         {% block content %}{% endblock %}
