--- a/ledger/templates/ledger/recipe_list.html
+++ b/ledger/templates/ledger/recipe_list.html
@@ -1,11 +1,10 @@
 {% extends "base.html" %}
 
-{% block title %}Recipes{% endblock %}
+<!--{% block title %}Recipes{% endblock %}-->
+
 {% block page_heading %}Recipe List{% endblock %}
 
 {% block content %}
-
-    <p>Recipe List</p>
     <ul>
         {% for recipe in recipes %}
             <li><a href="{% url 'recipe_detail' recipe.id %}">{{ recipe.name }}</a></li>
