--- a/ledger/templates/ledger/recipe_list.html
+++ b/ledger/templates/ledger/recipe_list.html
@@ -3,9 +3,20 @@
 {% block page_heading %}Recipe List{% endblock %}
 
 {% block content %}
+
+    <br>
+    <a href="{% url 'recipe_add' %}">
+        <button>Add New Recipe</button>
+    </a>
+
     <ul>
         {% for recipe in recipes %}
-            <li><a href="{% url 'recipe_detail' recipe.id %}">{{ recipe.name }}</a></li>
+            <li>
+                <a href="{% url 'recipe_detail' recipe.id %}">{{ recipe.name }}</a>
+            </li>
+        {% empty %}
+            <li>No recipes yet.</li>
         {% endfor %}
     </ul>
+
 {% endblock %}
